@@ -69,7 +69,8 @@ has_kbd_backlight(void)
 {
   return ((mops->type == MACHINE_MACBOOKPRO_1)
 	  || (mops->type == MACHINE_MACBOOKPRO_2)
-	  || (mops->type == MACHINE_MACBOOKPRO_3));
+	  || (mops->type == MACHINE_MACBOOKPRO_3)
+	  || (mops->type == MACHINE_MACBOOKAIR_1));
 }
 #endif /* __powerpc__ */
 
