@@ -33,9 +33,12 @@ typedef enum
     MACHINE_MACBOOKPRO_1,
     MACHINE_MACBOOKPRO_2,
     MACHINE_MACBOOKPRO_3,
+
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
     MACHINE_MACBOOK_3,
+
+    MACHINE_MACBOOKAIR_1,
 #else
     MACHINE_POWERBOOK_32,
     MACHINE_POWERBOOK_33,
